--- a/templates/comments.html
+++ b/templates/comments.html
@@ -9,7 +9,9 @@
 <body>
     <form action="" method="post">
         用戶： <input name="name"><br>
-        評論： <input name="url"><br> 
+        評論： <input name="url"><br>
+        星數： <input name="star"><br>
+         
         <input type="submit" value="提交">
         <ul>
             {% for i in posts %}
