--- a/templates/lineFriends.html
+++ b/templates/lineFriends.html
@@ -1,1 +1,1 @@
-<head><meta http-equiv="refresh" content="0; url=https://line.me/ti/p/35Yw27X"></head>
+<head><meta http-equiv="refresh" content="0; url=https://lin.ee/35yW27x"></head>
