--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html>
 <head>
-{% load static %}
-{% load mytags %}
+<link rel="stylesheet" href="{{ url_for('static',filename='css/style.css')}}">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, maximum-scale=1.0, user-scalable=0">
 
