--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
     <legend class="l">&nbsp;&nbsp;&nbsp;新增組合</legend>
     <table width="100%"  border="0" class="table" >
       <tbody>
-        <form action="" method="post" name="post">{% csrf_token %}
+        <form action="" method="post" name="post">
           <tr height="22px">
             <td width="30%">&nbsp;組合名稱： </td>
             <td width="70%">
