--- a/util/templates/index.html
+++ b/util/templates/index.html
@@ -181,7 +181,7 @@
           </td>
           <td>&nbsp;</td>
           <td align="center">
-            <form method="post" >{% csrf_token %}
+            <form method="post" >
             <input type="submit" name="totalConfirm" id="totalConfirm" class="button" value="送出" >
             </form>
           </td>
