--- a/templates/index.html
+++ b/templates/index.html
@@ -153,7 +153,7 @@
 		    
         <tr height="35px">
           
-          <td id="thousandths{{ forloop.counter }}"></td>
+          <td id="thousandths"></td>
           <td>
             <form action="delete/" method="post" name="delete">
               
