--- a/templates/index.html
+++ b/templates/index.html
@@ -157,7 +157,7 @@
           <td>
             <form action="delete/" method="post" name="delete">
               
-              <input type="hidden" name="fk_id" value="{{stock.id}}">
+              <input type="hidden" name="fk_id" value="d">
               <input type="submit" class="button" id="delete" name="delete" value="✕" style="width: 25px; height: 20px;padding-top: 0;padding-bottom: 0;font-style: strong;" >
             </form>  
           </td>
