--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
             <td width="70%">
               測試一
 
-              <input type="hidden" name="portfolioInfo" value="portfolioInfo">
+              <input type="text" name="portfolioInfo" value="portfolioInfo">
             </td>
           </tr>
           <tr height="22px">
