--- a/templates/index.html
+++ b/templates/index.html
@@ -43,25 +43,38 @@
       <tbody>
         <form action="" method="post" name="post">
           <tr height="22px">
-            <td width="30%">&nbsp;組合名稱： </td>
+            <td width="30%">&nbsp;寵物種類 </td>
             <td width="70%">
-              測試一
+      
 
               <input type="text" name="portfolioInfo" value="portfolioInfo">
             </td>
           </tr>
           <tr height="22px">
-            <td>&nbsp;投資時間： </td>
+            <td>&nbsp;寵物性別 </td>
               <td>
-                測試二
-
+                
+                <input type="text" name="portfolioInfo" value="portfolioInfo">
             </td>
           </tr>
           <tr height="22px">
-            <td>&nbsp;投資預算：</td>
-            <td id='budget'>
-              測試三
-
+            <td>&nbsp;寵物品種</td>
+            
+              <input type="text" name="portfolioInfo" value="portfolioInfo">
+            </td>
+          </tr>
+          <tr height="22px">
+            <td>&nbsp;寵物生日 </td>
+              <td>
+                
+                <input type="text" name="portfolioInfo" value="portfolioInfo">
+            </td>
+          </tr>
+          <tr height="22px">
+            <td>&nbsp;保險期間 </td>
+              <td>
+                
+                <input type="text" name="portfolioInfo" value="portfolioInfo">
             </td>
           </tr>
           <tr align="center">
