--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,12 @@
             <td>&nbsp;寵物性別 </td>
               
             <td>
-                <input type="text" name="portfolioInfo" value="portfolioInfo">
+              <input type="radio" id="male" name="gender" value="male">
+              <label for="male">Male</label><br>
+              <input type="radio" id="female" name="gender" value="female">
+              <label for="female">Female</label><br>
+              <input type="radio" id="other" name="gender" value="other">
+              <label for="other">Other</label>
             </td>
           </tr>
           <tr height="22px">
