--- a/templates/index.html
+++ b/templates/index.html
@@ -53,11 +53,9 @@
               
             <td>
               <input type="radio" id="male" name="gender" value="male">
-              <label for="male">Male</label><br>
+              <label for="male">Male</label>
               <input type="radio" id="female" name="gender" value="female">
-              <label for="female">Female</label><br>
-              <input type="radio" id="other" name="gender" value="other">
-              <label for="other">Other</label>
+              <label for="female">Female</label>
             </td>
           </tr>
           <tr height="22px">
