--- a/templates/index.html
+++ b/templates/index.html
@@ -64,21 +64,23 @@
           <tr height="22px">
             <td>&nbsp;寵物品種</td>
             <td>
-              <input type="text" name="portfolioInfo" value="portfolioInfo">
+              <input type="text" name="portfolioInfo" value="拉布拉多">
             </td>
           </tr>
           <tr height="22px">
             <td>&nbsp;寵物生日 </td>
               
             <td>
-                <input type="text" name="portfolioInfo" value="portfolioInfo">
+
+              <input type="date" id="birthday" name="birthday">
             </td>
           </tr>
           <tr height="22px">
             <td>&nbsp;保險期間 </td>
               
             <td>  
-                <input type="text" name="portfolioInfo" value="portfolioInfo">
+
+              <input type="date" id="birthday" name="birthday">
             </td>
           </tr>
           <tr align="center">
