--- a/templates/index.html
+++ b/templates/index.html
@@ -45,9 +45,9 @@
           <tr height="22px">
             <td width="30%">&nbsp;寵物種類 </td>
             <td width="70%">
-              <input type="radio" id="dog" name="gender" value="狗星人">
+              <input type="radio" id="dog" name="category" value="狗星人">
               <label for="male">狗星人</label>
-              <input type="radio" id="cat" name="gender" value="貓星人">
+              <input type="radio" id="cat" name="category" value="貓星人">
               <label for="female">貓星人</label>
 
             <br>
