--- a/templates/comments.html
+++ b/templates/comments.html
@@ -25,10 +25,10 @@
         <input type="submit" value="提交" class="button">
         <ul>
             {% for i in posts %}
-            {{<div class="new">   
-                <fieldset class="b">
-                     names[loop.index - 1] :  i 
-                </fieldset> 
+            {{<div class="new">   }}
+                {{<fieldset class="b">}}
+                     {{names[loop.index - 1]}} :  {{i}} 
+                {{</fieldset> 
             </div> }}
             {% endfor %}
         </ul>
