--- a/templates/apply.html
+++ b/templates/apply.html
@@ -30,7 +30,7 @@
 <body class="a">
 <div class="title" >
   <h1 align="center" >
-	  <font color="#FF5A58"> 填寫</font>寵物資料
+	  <font color="#FF5A58"> 申請</font>表單理賠
 	 </h1>
 	<p class="text" align="center">Creat a form.
   </p>
@@ -86,19 +86,25 @@
               <input type="date" id="birthday" name="birthday">
             </td>
           </tr>
-          <tr align="center">
-            <td height="36" colspan="2">
-              <strong>
-                  <input type="submit" class="button" value="確認" onclick='PortfolioConfirm()'>
-              </strong>
-            </td>
-          </tr>
+          
         </form>
       </tbody>
     </table>
   </fieldset>
 	</div>
   <p>&nbsp;</p>
-	
+	<div class="new">
+    <fieldset class="b">
+      <legend class="l">&nbsp;&nbsp;&nbsp;上傳某某咚咚</legend>
+      <input type="file" accept="image/*,.pdf">
+    </fieldset>
+  </div>
+  <div class="new">
+    <fieldset class="b">
+      <legend class="l">&nbsp;&nbsp;&nbsp;上傳某某咚咚2</legend>
+      <input type="file" accept="image/*,.pdf">
+    </fieldset>
+  </div>
+  <input type="submit" class="button" value="確認" onclick='PortfolioConfirm()'>
 </body>
 </html>
