--- a/templates/apply.html
+++ b/templates/apply.html
@@ -127,6 +127,6 @@
       <input type="file" accept="image/*,.pdf">
     </fieldset>
   </div>
-  <input type="submit" class="button" value="確認" onclick='PortfolioConfirm()'>
+  <input type="submit" class="button" value="確認" >
 </body>
 </html>
