--- a/templates/petForm.html
+++ b/templates/petForm.html
@@ -151,7 +151,7 @@
     </div>
 
     
-    <input  type="submit" class="button" value="確認" onclick='PortfolioConfirm()' align ="middle">
+    <input  type="submit" class="button" value="確認"  align ="middle">
     
     
 </body>
