--- a/templates/apply.html
+++ b/templates/apply.html
@@ -89,7 +89,7 @@
           <tr height="22px">
             <td>&nbsp;寵物品種</td>
             <td>
-              <input type="text" name="portfolioInfo" value="拉布拉多">
+              <input type="text" name="portfolioInfo" >
             </td>
           </tr>
           <tr height="22px">
@@ -117,14 +117,20 @@
   <p>&nbsp;</p>
 	<div class="new">
     <fieldset class="b">
-      <legend class="l">&nbsp;&nbsp;&nbsp;上傳某某咚咚</legend>
+      <legend class="l">&nbsp;&nbsp;&nbsp;上傳醫院診斷書</legend>
       <input type="file" accept="image/*,.pdf">
     </fieldset>
   </div>
   <div class="new">
     <fieldset class="b">
-      <legend class="l">&nbsp;&nbsp;&nbsp;上傳某某咚咚2</legend>
+      <legend class="l">&nbsp;&nbsp;&nbsp;上傳寵物患部照片</legend>
       <input type="file" accept="image/*,.pdf">
+    </fieldset>
+  </div>
+  <div class="new">
+    <fieldset class="b">
+      <legend class="l">&nbsp;&nbsp;&nbsp;上傳鼻紋辨識</legend>
+      <input type="file" accept="image/*" capture>
     </fieldset>
   </div>
   <input type="submit" class="button" value="確認" >
