--- a/templates/apply.html
+++ b/templates/apply.html
@@ -133,7 +133,15 @@
       <input type="file" accept="image/*" capture>
     </fieldset>
   </div>
-  <input type="submit" class="button" value="確認" >
+  <input type="submit" class="button" value="確認" onclick="PortfolioConfirm()" >
   </form>
+
+<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+<script type="text/javascript">
+// 成功輸入投資組合
+function PortfolioConfirm() {
+  window.alert("輸入完成，表單已經上傳等待審核中");
+}
+
 </body>
 </html>
