--- a/templates/petForm.html
+++ b/templates/petForm.html
@@ -32,7 +32,7 @@
   <h1 align="center" >
 	  <font color="#FF5A58"> 購買</font>happy寵物險
 	 </h1>
-	<p class="text" align="center">Creat a form.
+	<p class="text" align="center">Create a form.
   </p>
 </div>
 
@@ -68,11 +68,11 @@
           <tr height="22px">
             <td>&nbsp;寵物品種</td>
             <td>
-              <input type="text" name="portfolioInfo" value="拉布拉多">
+              <input type="text" name="portfolioInfo" >
             </td>
           </tr>
           <tr height="22px">
-            <td>&nbsp;寵物生日 </td>
+            <td>&nbsp;寵物生日(須滿8週~8足歲) </td>
               
             <td>
 
@@ -80,7 +80,7 @@
             </td>
           </tr>
           <tr height="22px">
-            <td>&nbsp;保險期間 </td>
+            <td>&nbsp;保險期間(一年期，自0時起) </td>
               
             <td>  
 
@@ -102,50 +102,33 @@
         <tbody>
           
             <tr height="22px">
-              <td width="30%">&nbsp;寵物種類 </td>
+              <td width="30%">&nbsp;飼主身分證字號 </td>
               <td width="70%">
-                <input type="radio" id="dog" name="category" value="狗星人">
-                <label for="male">狗星人</label>
-                <input type="radio" id="cat" name="category" value="貓星人">
-                <label for="female">貓星人</label>
+                <input type="text" name="portfolioInfo" >
   
               <br>
   
               </td>
             </tr>
             <tr height="22px">
-              <td>&nbsp;寵物性別 </td>
+              <td>&nbsp;飼主性別 </td>
                 
               <td>
                 <input type="radio" id="male" name="gender" value="male">
-                <label for="male">Male</label>
+                <label for="male">男</label>
                 <input type="radio" id="female" name="gender" value="female">
-                <label for="female">Female</label>
-              </td>
-            </tr>
-            <tr height="22px">
-              <td>&nbsp;寵物品種</td>
-              <td>
-                <input type="text" name="portfolioInfo" value="拉布拉多">
-              </td>
-            </tr>
-            <tr height="22px">
-              <td>&nbsp;寵物生日 </td>
-                
-              <td>
-  
-                <input type="date" id="birthday" name="birthday">
-              </td>
-            </tr>
-            <tr height="22px">
-              <td>&nbsp;保險期間 </td>
-                
-              <td>  
-  
-                <input type="date" id="birthday" name="birthday">
+                <label for="female">女</label>
               </td>
             </tr>
             
+            <tr height="22px">
+              <td>&nbsp;飼主生日(須年滿20歲) </td>
+                
+              <td>
+  
+                <input type="date" id="birthday" name="birthday">
+              </td>
+            </tr>   
           
         </tbody>
       </table>
