--- a/templates/petForm.html
+++ b/templates/petForm.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, maximum-scale=1.0, user-scalable=0">
 
-<title>happy寵物險</title>
+<title>HAPPY寵物險</title>
 <style type="text/css">
 @media screen{
 }
@@ -30,7 +30,7 @@
 <body class="a">
 <div class="title" >
   <h1 align="center" >
-	  <font color="#FF5A58"> 購買</font>happy寵物險
+	  <font color="#FF5A58"> 購買</font>HAPPY寵物險
 	 </h1>
 	<p class="text" align="center">Create a form.
   </p>
