--- a/templates/apply.html
+++ b/templates/apply.html
@@ -30,7 +30,7 @@
 <body class="a">
 <div class="title" >
   <h1 align="center" >
-	  <font color="#FF5A58"> 申請</font>表單理賠
+	  <font color="#FF5A58"> 申請</font>保單理賠
 	 </h1>
 	<p class="text" align="center">Create a form.
   </p>
