--- a/templates/payment.html
+++ b/templates/payment.html
@@ -1,3 +1,3 @@
 <img class="fit-picture"
-     src="../src/linePay.jpg"
+     src="/static/image/linePay.jpg"
      alt="Grapefruit slice atop a pile of other slices">
