--- a/templates/payment.html
+++ b/templates/payment.html
@@ -1,3 +1,3 @@
 <img class="fit-picture"
-     src="/static/image/linePay.jpg"
+     src="/static/image/linePay.png"
      alt="Grapefruit slice atop a pile of other slices">
